--- a/index.html
+++ b/index.html
@@ -11,26 +11,29 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <!-- header -->
     <header class="page-header">
-        <nav class="site-nav">
-            <a class="logo" href="./index.html">
-                <span class="logo-accent">Web</span>Studio
-            </a>
-            <ul class="list">
-                <li><a class="link current" href="./index.html">Студія</a></li>
-                <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
-                <li><a class="link" href="">Контакти</a></li>
+        <div class="container">
+            <nav class="site-nav">
+                <a class="logo link" href="./index.html">
+                    <span class="logo-accent">Web</span>Studio
+                </a>
+                <ul class="list">
+                    <li><a class="link current" href="./index.html">Студія</a></li>
+                    <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
+                    <li><a class="link" href="">Контакти</a></li>
+                </ul>
+            </nav>
+            <ul class="list contacts-header">
+                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="list contacts-header">
-            <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
 
     <!-- main -->
@@ -44,81 +47,95 @@
 
         <!-- features -->
         <section class="section features">
-            <!-- Логічний заголовок, сховати за допомогою CSS -->
-            <h2 class="title">Особливості</h2>
-            <ul class="list">
-                <li>
-                    <h3 class="features-title">Увага до деталей</h3>
-                    <p class="section-text">Ідейні міркування, і навіть початок повсякденної роботи з формування
-                        позиції.</p>
-                </li>
-                <li>
-                    <h3 class="features-title">Пунктуальніть</h3>
-                    <p class="section-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="features-title">Планування</h3>
-                    <p class="section-text">Так само консультація з широким активом значною мірою зумовлює.</p>
-                </li>
-                <li>
-                    <h3 class="features-title">Сучасні технології</h3>
-                    <p class="section-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-                    </p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="title visually-hidden">Особливості</h2>
+                <!-- A logical header semantically hidden using CSS -->
+                <ul class="list">
+                    <li>
+                        <h3 class="features-title">Увага до деталей</h3>
+                        <p class="section-text">Ідейні міркування, і навіть початок повсякденної роботи з формування
+                            позиції.</p>
+                    </li>
+                    <li>
+                        <h3 class="features-title">Пунктуальніть</h3>
+                        <p class="section-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у
+                            себе.
+                        </p>
+                    </li>
+                    <li>
+                        <h3 class="features-title">Планування</h3>
+                        <p class="section-text">Так само консультація з широким активом значною мірою зумовлює.</p>
+                    </li>
+                    <li>
+                        <h3 class="features-title">Сучасні технології</h3>
+                        <p class="section-text">Значимість цих проблем настільки очевидна, що реалізація планових
+                            завдань.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <!-- work -->
         <section class="section">
-            <h2 class="title">Чим ми займаємося</h2>
-            <ul class="list">
-                <li><img src="./images/development.jpg" alt="розробка" width="370"></li>
-                <li><img src="./images/optimization.jpg" alt="оптимізація" width="370"></li>
-                <li><img src="./images/design.jpg" alt="дизайн" width="370"></li>
-            </ul>
+            <div class="container">
+                <h2 class="title">Чим ми займаємося</h2>
+                <ul class="list">
+                    <li><img src="./images/development.jpg" alt="розробка" width="370"></li>
+                    <li><img src="./images/optimization.jpg" alt="оптимізація" width="370"></li>
+                    <li><img src="./images/design.jpg" alt="дизайн" width="370"></li>
+                </ul>
+            </div>
         </section>
 
         <!-- our team -->
         <section class="section team">
-            <h2 class="title">Наша команда</h2>
-            <ul class="list">
-                <li class="team-item">
-                    <img src="./images/igor-demyanenko.jpg" alt="фото Ігоря" width="270">
-                    <h3 class="team-title">Ігор Дем'яненко</h3>
-                    <p class="section-text" lang="en">Product Designer</p>
-                </li>
-                <li class="team-item">
-                    <img src="./images/olga-repina.jpg" alt="фото Ольги" width="270">
-                    <h3 class="team-title">Ольга Рєпіна</h3>
-                    <p class="section-text" lang="en">Frontend Developer</p>
-                </li>
-                <li class="team-item">
-                    <img src="./images/mykola-tarasov.jpg" alt="фото Миколи" width="270">
-                    <h3 class="team-title">Микола Тарасов</h3>
-                    <p class="section-text" lang="en">Marketing</p>
-                </li>
-                <li class="team-item">
-                    <img src="./images/mikhailo-ermakov.jpg" alt="фото Михайла" width="270">
-                    <h3 class="team-title">Михайло Єрмаков</h3>
-                    <p class="section-text" lang="en">UI Designer</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="title team-title">Наша команда</h2>
+                <ul class="list">
+                    <li class="team-item">
+                        <img class="team-img" src="./images/igor-demyanenko.jpg" alt="фото Ігоря" width="270">
+                        <h3 class="team-name">Ігор Дем'яненко</h3>
+                        <p class="section-text" lang="en">Product Designer</p>
+                    </li>
+                    <li class="team-item">
+                        <img class="team-img" src="./images/olga-repina.jpg" alt="фото Ольги" width="270">
+                        <h3 class="team-name">Ольга Рєпіна</h3>
+                        <p class="section-text" lang="en">Frontend Developer</p>
+                    </li>
+                    <li class="team-item">
+                        <img class="team-img" src="./images/mykola-tarasov.jpg" alt="фото Миколи" width="270">
+                        <h3 class="team-name">Микола Тарасов</h3>
+                        <p class="section-text" lang="en">Marketing</p>
+                    </li>
+                    <li class="team-item">
+                        <img class="team-img" src="./images/mikhailo-ermakov.jpg" alt="фото Михайла" width="270">
+                        <h3 class="team-name">Михайло Єрмаков</h3>
+                        <p class="section-text" lang="en">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 
     <!-- footer -->
     <footer class="page-footer">
-        <a class="logo logo-footer" href=""><span class="logo-accent">Web</span>Studio</a>
-        <address class="address-footer">
-            <ul class="list">
-                <li><a class="address-link link" href="https://goo.gl/maps/zaocLffD8GGZKToq6" target="_blank"
-                        rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
-                </li>
-                <li><a class="contacts-footer link" href="mailto:info@example.com">info@example.com</a></li>
-                <li><a class="contacts-footer link" href="tel:+380991111111">+38 099 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <a class="logo logo-footer link" href=""><span class="logo-accent">Web</span>Studio</a>
+            <address class="address-footer">
+                <ul class="list">
+                    <li class=" contacts-item"><a class="address-link link" href="https://goo.gl/maps/zaocLffD8GGZKToq6"
+                            target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+                    </li>
+                    <li class=" contacts-item"><a class="contacts-footer link"
+                            href="mailto:info@example.com">info@example.com</a>
+                    </li>
+                    <li class=" contacts-item"><a class="contacts-footer link" href="tel:+380991111111">+38 099 111 11
+                            11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 
 </body>
