--- a/portfolio.html
+++ b/portfolio.html
@@ -11,124 +11,140 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <!-- header -->
     <header class="page-header">
-        <nav class="site-nav">
-            <a class="logo" href="./index.html">
-                <span class="logo-accent">Web</span>Studio
-            </a>
-            <ul class="list">
-                <li><a class="link" href="./index.html">Студія</a></li>
-                <li><a class="link current" href="./portfolio.html">Портфоліо</a></li>
-                <li><a class="link" href="">Контакти</a></li>
+        <div class="container">
+            <nav class="site-nav">
+                <a class="logo link" href="./index.html">
+                    <span class="logo-accent">Web</span>Studio
+                </a>
+                <ul class="list">
+                    <li><a class="link" href="./index.html">Студія</a></li>
+                    <li><a class="link current" href="./portfolio.html">Портфоліо</a></li>
+                    <li><a class="link" href="">Контакти</a></li>
+                </ul>
+            </nav>
+            <ul class="list contacts-header">
+                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="list contacts-header">
-            <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
 
     <!-- main -->
     <main>
-        <section>
-            <h1>Портфоліо</h1>
-            <!-- filter -->
-            <ul class="portfolio-filter list">
-                <li><button class="btn secondary current" type="button">Усі</button></li>
-                <li><button class="btn secondary" type="button">Веб-сайти</button></li>
-                <li><button class="btn secondary" type="button">Додатки</button></li>
-                <li><button class="btn secondary" type="button">Дизайн</button></li>
-                <li><button class="btn secondary" type="button">Маркетинг</button></li>
-            </ul>
-            <!-- portfolio-cart -->
-            <ul class="portfolio-cart list">
-                <li>
-                    <a href="">
-                        <img src="./images/techno.jpg" alt="сайт на ноутбуці" width="370">
-                        <h2 class="portfolio-title">Технокряк</h2>
-                        <p class="portfolio-text">Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/neworlean-vs-goldenstar.jpg" alt="два баскетболісти з м'ячем
-                            " width="370">
-                        <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-                        <p class="portfolio-text">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/seafood.jpg" alt="логотип ресторану" width="370">
-                        <h2 class="portfolio-title">Ресторан Seafood</h2>
-                        <p class="portfolio-text">Додаток</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/prime.jpg" alt="навушники" width="370">
-                        <h2 class="portfolio-title">Проєкт Prime</h2>
-                        <p class="portfolio-text">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/boxes.jpg" alt="дві коробки" width="370">
-                        <h2 class="portfolio-title">Проєкт Boxes</h2>
-                        <p class="portfolio-text">Додаток</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/inspiration-has-no-borders.jpg" alt="веб-сайт на моніторі" width="370">
-                        <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                        <p class="portfolio-text">Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/limited-edition.jpg" alt="розгорнутий журнал" width="370">
-                        <h2 class="portfolio-title">Видання Limited Edition</h2>
-                        <p class="portfolio-text">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/projekt-lab.jpg" alt="бірка з логотипом" width="370">
-                        <h2 class="portfolio-title">Проєкт LAB</h2>
-                        <p class="portfolio-text">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/growing-business.jpg" alt="друкує на ноутбуці" width="370">
-                        <h2 class="portfolio-title">Growing Business</h2>
-                        <p class="portfolio-text">Додаток</p>
-                    </a>
-                </li>
-            </ul>
-
+        <section class="section">
+            <div class="container">
+                <h1 class="visually-hidden">Портфоліо</h1>
+                <!-- filter -->
+                <ul class="portfolio-filter list">
+                    <li><button class="btn secondary current" type="button">Усі</button></li>
+                    <li><button class="btn secondary" type="button">Веб-сайти</button></li>
+                    <li><button class="btn secondary" type="button">Додатки</button></li>
+                    <li><button class="btn secondary" type="button">Дизайн</button></li>
+                    <li><button class="btn secondary" type="button">Маркетинг</button></li>
+                </ul>
+                <!-- portfolio-card -->
+                <ul class="portfolio-card list">
+                    <li>
+                        <a class="link portfolio-link" href="">
+                            <img class="portfolio-img" src="./images/techno.jpg" alt="сайт на ноутбуці" width="370">
+                            <div class="portfolio-card-text">
+                                <h2 class="portfolio-title">Технокряк</h2>
+                                <p class="portfolio-text">Веб-сайт</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link portfolio-link" href="">
+                            <img class="portfolio-img" src="./images/neworlean-vs-goldenstar.jpg" alt="два баскетболісти з м'ячем
+                                                        " width="370">
+                            <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                            <p class="portfolio-text">Дизайн</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link portfolio-link" href="">
+                            <img class="portfolio-img" src="./images/seafood.jpg" alt="логотип ресторану" width="370">
+                            <h2 class="portfolio-title">Ресторан Seafood</h2>
+                            <p class="portfolio-text">Додаток</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link portfolio-link" href="">
+                            <img class="portfolio-img" src="./images/prime.jpg" alt="навушники" width="370">
+                            <h2 class="portfolio-title">Проєкт Prime</h2>
+                            <p class="portfolio-text">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link portfolio-link" href="">
+                            <img class="portfolio-img" src="./images/boxes.jpg" alt="дві коробки" width="370">
+                            <h2 class="portfolio-title">Проєкт Boxes</h2>
+                            <p class="portfolio-text">Додаток</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link portfolio-link" href="">
+                            <img class="portfolio-img" src="./images/inspiration-has-no-borders.jpg"
+                                alt="веб-сайт на моніторі" width="370">
+                            <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                            <p class="portfolio-text">Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link portfolio-link" href="">
+                            <img class="portfolio-img" src="./images/limited-edition.jpg" alt="розгорнутий журнал"
+                                width="370">
+                            <h2 class="portfolio-title">Видання Limited Edition</h2>
+                            <p class="portfolio-text">Дизайн</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link portfolio-link" href="">
+                            <img class="portfolio-img" src="./images/projekt-lab.jpg" alt="бірка з логотипом"
+                                width="370">
+                            <h2 class="portfolio-title">Проєкт LAB</h2>
+                            <p class="portfolio-text">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link portfolio-link" href="">
+                            <img class="portfolio-img" src="./images/growing-business.jpg" alt="друкує на ноутбуці"
+                                width="370">
+                            <h2 class="portfolio-title">Growing Business</h2>
+                            <p class="portfolio-text">Додаток</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
 
     </main>
 
     <!-- footer -->
     <footer class="page-footer">
-        <a class="logo logo-footer" href=""><span class="logo-accent">Web</span>Studio</a>
-        <address class="address-footer">
-            <ul class="list">
-                <li><a class="address-link link" href="https://goo.gl/maps/zaocLffD8GGZKToq6" target="_blank"
-                        rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
-                </li>
-                <li><a class="contacts-footer link" href="mailto:info@example.com">info@example.com</a></li>
-                <li><a class="contacts-footer link" href="tel:+380991111111">+38 099 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <a class="logo logo-footer link" href=""><span class="logo-accent">Web</span>Studio</a>
+            <address class="address-footer">
+                <ul class="list">
+                    <li class=" contacts-item"><a class="address-link link" href="https://goo.gl/maps/zaocLffD8GGZKToq6"
+                            target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+                    </li>
+                    <li class=" contacts-item"><a class="contacts-footer link"
+                            href="mailto:info@example.com">info@example.com</a>
+                    </li>
+                    <li class=" contacts-item"><a class="contacts-footer link" href="tel:+380991111111">+38 099 111 11
+                            11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
