adds sending geometry

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </section>
 
         <!-- work -->
-        <section class="section">
+        <section class="section work">
             <div class="container">
                 <h2 class="title">Чим ми займаємося</h2>
                 <ul class="list">
