--- a/portfolio.html
+++ b/portfolio.html
@@ -61,64 +61,88 @@
                         </a>
                     </li>
                     <li>
+
                         <a class="link portfolio-link" href="">
                             <img class="portfolio-img" src="./images/neworlean-vs-goldenstar.jpg" alt="два баскетболісти з м'ячем
                                                         " width="370">
-                            <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-                            <p class="portfolio-text">Дизайн</p>
+                            <div class="portfolio-card-text">
+                                <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                                <p class="portfolio-text">Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li>
+
                         <a class="link portfolio-link" href="">
                             <img class="portfolio-img" src="./images/seafood.jpg" alt="логотип ресторану" width="370">
-                            <h2 class="portfolio-title">Ресторан Seafood</h2>
-                            <p class="portfolio-text">Додаток</p>
+                            <div class="portfolio-card-text">
+                                <h2 class="portfolio-title">Ресторан Seafood</h2>
+                                <p class="portfolio-text">Додаток</p>
+                            </div>
                         </a>
                     </li>
                     <li>
+
                         <a class="link portfolio-link" href="">
                             <img class="portfolio-img" src="./images/prime.jpg" alt="навушники" width="370">
-                            <h2 class="portfolio-title">Проєкт Prime</h2>
-                            <p class="portfolio-text">Маркетинг</p>
+                            <div class="portfolio-card-text">
+                                <h2 class="portfolio-title">Проєкт Prime</h2>
+                                <p class="portfolio-text">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li>
+
                         <a class="link portfolio-link" href="">
                             <img class="portfolio-img" src="./images/boxes.jpg" alt="дві коробки" width="370">
-                            <h2 class="portfolio-title">Проєкт Boxes</h2>
-                            <p class="portfolio-text">Додаток</p>
+                            <div class="portfolio-card-text">
+                                <h2 class="portfolio-title">Проєкт Boxes</h2>
+                                <p class="portfolio-text">Додаток</p>
+                            </div>
                         </a>
                     </li>
                     <li>
+
                         <a class="link portfolio-link" href="">
                             <img class="portfolio-img" src="./images/inspiration-has-no-borders.jpg"
                                 alt="веб-сайт на моніторі" width="370">
-                            <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                            <p class="portfolio-text">Веб-сайт</p>
+                            <div class="portfolio-card-text">
+                                <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                                <p class="portfolio-text">Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
                     <li>
+
                         <a class="link portfolio-link" href="">
                             <img class="portfolio-img" src="./images/limited-edition.jpg" alt="розгорнутий журнал"
                                 width="370">
-                            <h2 class="portfolio-title">Видання Limited Edition</h2>
-                            <p class="portfolio-text">Дизайн</p>
+                            <div class="portfolio-card-text">
+                                <h2 class="portfolio-title">Видання Limited Edition</h2>
+                                <p class="portfolio-text">Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li>
+
                         <a class="link portfolio-link" href="">
                             <img class="portfolio-img" src="./images/projekt-lab.jpg" alt="бірка з логотипом"
                                 width="370">
-                            <h2 class="portfolio-title">Проєкт LAB</h2>
-                            <p class="portfolio-text">Маркетинг</p>
+                            <div class="portfolio-card-text">
+                                <h2 class="portfolio-title">Проєкт LAB</h2>
+                                <p class="portfolio-text">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li>
+
                         <a class="link portfolio-link" href="">
                             <img class="portfolio-img" src="./images/growing-business.jpg" alt="друкує на ноутбуці"
                                 width="370">
-                            <h2 class="portfolio-title">Growing Business</h2>
-                            <p class="portfolio-text">Додаток</p>
+                            <div class="portfolio-card-text">
+                                <h2 class="portfolio-title">Growing Business</h2>
+                                <p class="portfolio-text">Додаток</p>
+                            </div>
                         </a>
                     </li>
                 </ul>
