--- a/index.html
+++ b/index.html
@@ -18,20 +18,21 @@
 <body>
     <!-- header -->
     <header class="page-header">
-        <div class="container">
+        <div class="container header-nav">
             <nav class="site-nav">
-                <a class="logo link" href="./index.html">
+                <a class="logo link logo-header" href="./index.html">
                     <span class="logo-accent">Web</span>Studio
                 </a>
-                <ul class="list">
-                    <li><a class="link current" href="./index.html">Студія</a></li>
-                    <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
-                    <li><a class="link" href="">Контакти</a></li>
+                <ul class="list site-nav-list">
+                    <li class="site-nav-item"><a class="link site-nav-link current" href="./index.html">Студія</a></li>
+                    <li class="site-nav-item"><a class="link site-nav-link" href="./portfolio.html">Портфоліо</a></li>
+                    <li class="site-nav-item"><a class="link site-nav-link" href="">Контакти</a></li>
                 </ul>
             </nav>
             <ul class="list contacts-header">
-                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="contacts-header-item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="contacts-header-item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
