adds flex to home page

--- a/index.html
+++ b/index.html
@@ -51,23 +51,23 @@
             <div class="container">
                 <h2 class="title visually-hidden">Особливості</h2>
                 <!-- A logical header semantically hidden using CSS -->
-                <ul class="list">
-                    <li>
+                <ul class="list features-list">
+                    <li class="features-item">
                         <h3 class="features-title">Увага до деталей</h3>
                         <p class="section-text">Ідейні міркування, і навіть початок повсякденної роботи з формування
                             позиції.</p>
                     </li>
-                    <li>
+                    <li class="features-item">
                         <h3 class="features-title">Пунктуальніть</h3>
                         <p class="section-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у
                             себе.
                         </p>
                     </li>
-                    <li>
+                    <li class="features-item">
                         <h3 class="features-title">Планування</h3>
                         <p class="section-text">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                    <li>
+                    <li class="features-item">
                         <h3 class="features-title">Сучасні технології</h3>
                         <p class="section-text">Значимість цих проблем настільки очевидна, що реалізація планових
                             завдань.
@@ -80,11 +80,11 @@
         <!-- work -->
         <section class="section work">
             <div class="container">
-                <h2 class="title">Чим ми займаємося</h2>
-                <ul class="list">
-                    <li><img src="./images/development.jpg" alt="розробка" width="370"></li>
-                    <li><img src="./images/optimization.jpg" alt="оптимізація" width="370"></li>
-                    <li><img src="./images/design.jpg" alt="дизайн" width="370"></li>
+                <h2 class="title work-title">Чим ми займаємося</h2>
+                <ul class="list work-list">
+                    <li class="work-item"><img src="./images/development.jpg" alt="розробка" width="370"></li>
+                    <li class="work-item"><img src="./images/optimization.jpg" alt="оптимізація" width="370"></li>
+                    <li class="work-item"><img src="./images/design.jpg" alt="дизайн" width="370"></li>
                 </ul>
             </div>
         </section>
@@ -93,26 +93,34 @@
         <section class="section team">
             <div class="container">
                 <h2 class="title team-title">Наша команда</h2>
-                <ul class="list">
+                <ul class="list team-list">
                     <li class="team-item">
                         <img class="team-img" src="./images/igor-demyanenko.jpg" alt="фото Ігоря" width="270">
-                        <h3 class="team-name">Ігор Дем'яненко</h3>
-                        <p class="section-text" lang="en">Product Designer</p>
+                        <div class="team-item-text">
+                            <h3 class="team-name">Ігор Дем'яненко</h3>
+                            <p class="section-text" lang="en">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img class="team-img" src="./images/olga-repina.jpg" alt="фото Ольги" width="270">
-                        <h3 class="team-name">Ольга Рєпіна</h3>
-                        <p class="section-text" lang="en">Frontend Developer</p>
+                        <div class="team-item-text">
+                            <h3 class="team-name">Ольга Рєпіна</h3>
+                            <p class="section-text" lang="en">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img class="team-img" src="./images/mykola-tarasov.jpg" alt="фото Миколи" width="270">
-                        <h3 class="team-name">Микола Тарасов</h3>
-                        <p class="section-text" lang="en">Marketing</p>
+                        <div class="team-item-text">
+                            <h3 class="team-name">Микола Тарасов</h3>
+                            <p class="section-text" lang="en">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img class="team-img" src="./images/mikhailo-ermakov.jpg" alt="фото Михайла" width="270">
-                        <h3 class="team-name">Михайло Єрмаков</h3>
-                        <p class="section-text" lang="en">UI Designer</p>
+                        <div class="team-item-text">
+                            <h3 class="team-name">Михайло Єрмаков</h3>
+                            <p class="section-text" lang="en">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
