completes the main + header and portfolio footer

--- a/index.html
+++ b/index.html
@@ -133,13 +133,15 @@
             <a class="logo logo-footer link" href=""><span class="logo-accent">Web</span>Studio</a>
             <address class="address-footer">
                 <ul class="list">
-                    <li class=" contacts-item"><a class="address-link link" href="https://goo.gl/maps/zaocLffD8GGZKToq6"
-                            target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+                    <li class=" contacts-item">
+                        <a class="address-link link" href="https://goo.gl/maps/zaocLffD8GGZKToq6" target="_blank"
+                            rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
                     </li>
-                    <li class=" contacts-item"><a class="contacts-footer link"
-                            href="mailto:info@example.com">info@example.com</a>
+                    <li class=" contacts-item">
+                        <a class="contacts-footer link" href="mailto:info@example.com">info@example.com</a>
                     </li>
-                    <li class=" contacts-item"><a class="contacts-footer link" href="tel:+380991111111">+38 099 111 11
+                    <li class=" contacts-item">
+                        <a class="contacts-footer link" href="tel:+380991111111">+38 099 111 11
                             11</a>
                     </li>
                 </ul>
