--- a/portfolio.html
+++ b/portfolio.html
@@ -17,21 +17,29 @@
 
 <body>
     <!-- header -->
+
     <header class="page-header">
-        <div class="container">
+        <div class="container header-nav">
             <nav class="site-nav">
-                <a class="logo link" href="./index.html">
+                <a class="logo link logo-header" href="./index.html">
                     <span class="logo-accent">Web</span>Studio
                 </a>
-                <ul class="list">
-                    <li><a class="link" href="./index.html">Студія</a></li>
-                    <li><a class="link current" href="./portfolio.html">Портфоліо</a></li>
-                    <li><a class="link" href="">Контакти</a></li>
+                <ul class="list site-nav-list">
+                    <li class="site-nav-item">
+                        <a class="link site-nav-link" href="./index.html">Студія</a>
+                    </li>
+                    <li class="site-nav-item">
+                        <a class="link site-nav-link current" href="./portfolio.html">Портфоліо</a>
+                    </li>
+                    <li class="site-nav-item">
+                        <a class="link site-nav-link" href="">Контакти</a>
+                    </li>
                 </ul>
             </nav>
             <ul class="list contacts-header">
-                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="contacts-header-item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="contacts-header-item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -157,13 +165,15 @@
             <a class="logo logo-footer link" href=""><span class="logo-accent">Web</span>Studio</a>
             <address class="address-footer">
                 <ul class="list">
-                    <li class=" contacts-item"><a class="address-link link" href="https://goo.gl/maps/zaocLffD8GGZKToq6"
-                            target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+                    <li class=" contacts-item">
+                        <a class="address-link link" href="https://goo.gl/maps/zaocLffD8GGZKToq6" target="_blank"
+                            rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
                     </li>
-                    <li class=" contacts-item"><a class="contacts-footer link"
-                            href="mailto:info@example.com">info@example.com</a>
+                    <li class=" contacts-item">
+                        <a class="contacts-footer link" href="mailto:info@example.com">info@example.com</a>
                     </li>
-                    <li class=" contacts-item"><a class="contacts-footer link" href="tel:+380991111111">+38 099 111 11
+                    <li class=" contacts-item">
+                        <a class="contacts-footer link" href="tel:+380991111111">+38 099 111 11
                             11</a>
                     </li>
                 </ul>
