--- a/portfolio.html
+++ b/portfolio.html
@@ -51,11 +51,11 @@
                 <h1 class="visually-hidden">Портфоліо</h1>
                 <!-- filter -->
                 <ul class="portfolio-filter list">
-                    <li><button class="btn secondary current" type="button">Усі</button></li>
-                    <li><button class="btn secondary" type="button">Веб-сайти</button></li>
-                    <li><button class="btn secondary" type="button">Додатки</button></li>
-                    <li><button class="btn secondary" type="button">Дизайн</button></li>
-                    <li><button class="btn secondary" type="button">Маркетинг</button></li>
+                    <li class="portfolio-filter-item"><button class="btn secondary current" type="button">Усі</button></li>
+                    <li class="portfolio-filter-item"><button class="btn secondary" type="button">Веб-сайти</button></li>
+                    <li class="portfolio-filter-item"><button class="btn secondary" type="button">Додатки</button></li>
+                    <li class="portfolio-filter-item"><button class="btn secondary" type="button">Дизайн</button></li>
+                    <li class="portfolio-filter-item"><button class="btn secondary" type="button">Маркетинг</button></li>
                 </ul>
                 <!-- portfolio-card -->
                 <ul class="portfolio-card list">
